--- a/css/style.css
+++ b/css/style.css
@@ -380,11 +380,10 @@ a {
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
-  color: #3333333;
+  color: #333333;
   text-align: center;
 
   background-color: #f2f2f2;
-
 }
 
 /* Стили футера */
