--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,41 @@ a {
   text-decoration: none;
 }
 
+.main-header {
+  min-height: 56px;
+}
+
+.main-navigation {
+  position: relative;
+}
+
+.logo {
+  position: absolute;
+  left: 50%;
+  top: 0;
+
+  transform: translateX(-70px);
+}
 .site-navigation {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+
   list-style: none;
 }
 
 .site-navigation a {
   color: #000000;
+}
+
+.site-navigation__item {
+  width: 239px;
+  text-align: center;
+}
+
+.site-navigation__item:nth-child(3) {
+  margin-left: auto;
 }
 
 .site-navigation a:hover,
@@ -45,12 +74,13 @@ a {
 
 .promo {
   /*Временно для наглядного отображения блока*/
-  min-height: 540px;
+  min-height: 563px;
+  margin-bottom: 65px;
 
   background-image: url("../img/background-mask.svg"), url("../img/slogan.svg"), url("../img/background.jpg");
   background-position: center bottom, center 130px, center top;
   background-repeat: no-repeat;
-  background-size: auto, 458px 352px, auto;
+  background-size: auto, 458px 352px, cover;
 }
 
 .features {
@@ -58,6 +88,10 @@ a {
 }
 
 .features__title {
+  width: 620px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+
   font-size: 21px;
 }
 
@@ -67,9 +101,28 @@ a {
 }
 
 .features__list {
+  padding: 0;
+  margin: 0;
+
   list-style: none;
 
   line-height: 21px;
+}
+
+.feature-columns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.feature-columns .features__item {
+  width: 400px;
+}
+
+.features__item {
+  min-height: 256px;
+  margin: 0;
+  padding: 0;
 }
 
 .item-feature--detailed {
@@ -106,6 +159,10 @@ a {
   background-repeat: no-repeat;
 }
 
+.item-feature--sub {
+  min-height: 330px;
+}
+
 .item-feature--food {
   background-image: url("../img/feature-food.svg");
   background-position: center 0;
@@ -132,6 +189,11 @@ a {
 
 .item-feature--brief {
   background-color: #eeeeee;
+}
+
+.search {
+  width: 568px;
+  margin: 0 auto;
 }
 
 .search__title {
@@ -209,8 +271,30 @@ a {
   background-repeat: no-repeat;
 }
 
+.filters__form  {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px 70px;
+}
+
 .filters__form fieldset {
+  margin: 0;
+  padding: 0;
   border: none;
+}
+
+.filters__infrastructure {
+  width: 241px;
+}
+
+.filters__house-type {
+  width: 250px;
+}
+
+
+fieldset.filters__price {
+  width: 328px;
+  margin-left: auto;
 }
 
 .filters__form ul {
@@ -245,61 +329,97 @@ a {
   background-color: #ffffff;
 }
 
-.search__found {
+.search-results {
+  padding: 0 73px;
+}
+
+.inner-columns {
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.search-results__found {
+  width: 135px;
+  margin-right: 30px;
   font-size: 21px;
 }
 
-.search__sorting-type {
+.search-results__sorting-type {
+  width: 364px;
+
   font-size: 12px;
   line-height: 18px;
   font-weight: 400;
 }
 
-.search__type {
+.searc-results__type {
   color: rgba(0, 0, 0, 0.3);
   text-decoration: underline;
 }
 
-.search__type:hover,
-.search__type:focus {
+.search-results__type:hover,
+.search-results__type:focus {
   color: #81b3d2;
 }
 
-.search__type:active {
+.search-results__type:active {
   color: #000000;
   text-decoration: none;
 }
 
-.search__type--current {
+.search-results__type--current {
   color: #81b3d2;
   text-decoration: none;
 }
 
-.search__order {
+.search-results__sorting-order {
+  width: 250px;
+  margin-left: auto;
+}
+
+.search-results__order {
   color: #cacaca;
 }
 
-.search__order:hover,
-.search__order:focus {
+.search-results__order:hover,
+.search-results__order:focus {
   color: #000000;
 }
 
-.search__order:active {
+.search-results__order:active {
   color: #81b3d2;
 }
 
-.search__order--current {
+.search-results__order--current {
   color: #81b3d2;
 }
 
-.search__order--current:hover,
-.search__order--current:focus {
+.search-results__order--current:hover,
+.search-results__order--current:focus {
   color: #81b3d2;
 }
 
 
-.search__results-list {
+.search-results__results-list {
+  padding: 0;
+  margin: 0;
+
   list-style: none;
+}
+
+.result-item {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.result-item__img {
+  width: 135px;
+  margin-right: 30px;
+}
+
+.result-item__info {
+  width: 364px;
 }
 
 .result-item__lodging-name a {
@@ -358,6 +478,11 @@ a {
   background-color: #503e33;
 }
 
+.result-item__rating {
+  width: 241px;
+  margin-left: auto;
+}
+
 .result-item__rating-level {
   background-position: right 0;
   background-repeat: no-repeat;
@@ -389,7 +514,15 @@ a {
 /* Стили футера */
 
 .main-footer {
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 120px;
+
   text-align: center;
+}
+
+.main-footer > * {
+  width: 400px;
 }
 
 .main-footer__hashtag {
@@ -397,6 +530,9 @@ a {
 }
 
 .main-footer__social {
+  padding: 0;
+  margin: 0;
+
   list-style: none;
 }
 
