--- a/css/style.css
+++ b/css/style.css
@@ -35,28 +35,41 @@ a {
   left: 50%;
   top: 0;
 
-  transform: translateX(-70px);
+  width: 140px;
+  height: 72px;
+
+  transform: translateX(-50%);
 }
 .site-navigation {
   display: flex;
   flex-wrap: wrap;
+  width: 1056px;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
 
   list-style: none;
 }
 
+.site-navigation__item {
+  width: 25%;
+}
+
+.site-navigation__item:nth-child(2)  {
+  /*margin-right: 147px;*/
+}
+
+.site-navigation__item:nth-child(3)  {
+  /*margin-right: auto;*/
+  text-align: right;
+}
+
+.site-navigation__item:nth-child(4)  {
+  /*margin-left: 165px;*/
+  text-align: right;
+}
+
 .site-navigation a {
   color: #000000;
-}
-
-.site-navigation__item {
-  width: 239px;
-  text-align: center;
-}
-
-.site-navigation__item:nth-child(3) {
-  margin-left: auto;
 }
 
 .site-navigation a:hover,
@@ -74,33 +87,46 @@ a {
 
 .promo {
   /*Временно для наглядного отображения блока*/
-  min-height: 563px;
-  margin-bottom: 65px;
+  min-height: 508px;
+  margin-bottom: 60px;
 
   background-image: url("../img/background-mask.svg"), url("../img/slogan.svg"), url("../img/background.jpg");
-  background-position: center bottom, center 130px, center top;
+  background-position: center bottom, center 77px, center -56px;
   background-repeat: no-repeat;
-  background-size: auto, 458px 352px, cover;
+  background-size: 1200px 57px, 458px 352px, cover;
 }
 
 .features {
+  margin-bottom: 50px;
   text-align: center;
 }
 
 .features__title {
   width: 620px;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 27px;
 
   font-size: 21px;
 }
 
 .features__intro {
+  margin: 0;
+  margin-bottom: 51px;
   font-weight: 400;
   color: #333333;
 }
 
 .features__list {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  -o-flex-wrap: wrap;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
 
@@ -109,23 +135,15 @@ a {
   line-height: 21px;
 }
 
-.feature-columns {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.feature-columns .features__item {
-  width: 400px;
-}
-
 .features__item {
+  width: 400px;
   min-height: 256px;
   margin: 0;
   padding: 0;
 }
 
 .item-feature--detailed {
+  width: 100%;
   color: #ffffff;
 
   background-color: #81b3d2;
@@ -197,12 +215,17 @@ a {
 }
 
 .search__title {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 25px;
   font-size: 30px;
   line-height: 36px;
   text-align: center;
 }
 
 .search__description {
+  margin-bottom: 45px;
+
   line-height: 24px;
   font-weight: 400;
   color: #333333;
@@ -220,6 +243,8 @@ a {
 }
 
 .search__button--open {
+  width: 100%;
+
   background-color: #766357;
 }
 
@@ -262,6 +287,8 @@ a {
 /* Стили внутренней страницы каталога */
 
 .filters {
+  min-height: 218px;
+
   line-height: 21px;
   color: #ffffff;
 
@@ -274,7 +301,7 @@ a {
 .filters__form  {
   display: flex;
   flex-wrap: wrap;
-  padding: 32px 70px;
+  padding: 27px 72px;
 }
 
 .filters__form fieldset {
@@ -283,16 +310,17 @@ a {
   border: none;
 }
 
-.filters__infrastructure {
-  width: 241px;
+.filters__form .filters__infrastructure {
+  width: 240px;
+  margin-right: 15px;
 }
 
-.filters__house-type {
+.filters__form .filters__house-type {
   width: 250px;
 }
 
 
-fieldset.filters__price {
+.filters__form .filters__price {
   width: 328px;
   margin-left: auto;
 }
@@ -307,6 +335,7 @@ fieldset.filters__price {
 }
 
 .filters input[type="text"] {
+  width: 50px;
   font: inherit;
 }
 
@@ -330,13 +359,12 @@ fieldset.filters__price {
 }
 
 .search-results {
-  padding: 0 73px;
+  padding: 0 72px;
 }
 
 .inner-columns {
   display: flex;
   flex-wrap: wrap;
-
 }
 
 .search-results__found {
@@ -374,8 +402,10 @@ fieldset.filters__price {
 }
 
 .search-results__sorting-order {
-  width: 250px;
+  width: 241px;
   margin-left: auto;
+
+  text-align: right;
 }
 
 .search-results__order {
@@ -416,10 +446,6 @@ fieldset.filters__price {
 .result-item__img {
   width: 135px;
   margin-right: 30px;
-}
-
-.result-item__info {
-  width: 364px;
 }
 
 .result-item__lodging-name a {
@@ -516,6 +542,7 @@ fieldset.filters__price {
 .main-footer {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   min-height: 120px;
 
   text-align: center;
